--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-/* @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap');
-
 body {
-  font-family: "Rubik", sans-serif;
-} */
+  font-family: 'Quantico', sans-serif ;
+}
