--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -2,25 +2,10 @@ $primary-color:#fe538d;
 $secondary-color:#FFB703;
 $text-color:#000;
 
-@import url('https://fonts.googleapis.com/css2?family=Liter&family=Mako&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
-    font-family: "Rubik", serif;
-    // font-family: "Poppins", serif;
-}
-
-h1{
-    font-size: 4.5em;
-}
-
-h2{
-    font-size:3em;
-}
-
-h3{
-    font-size: 2em;
-}
-
-p{
-    font-size: 1.2em;
+    font-family: "Jost", serif;
+    // font-family: "Barlow Semi Condensed", serif;
+    // font-family: "Josefin Sans", serif;  
 }
